; ModuleID = '/home/carl/AnghaBench/micropython/ports/cc3200/FreeRTOS/Source/extr_tasks.c_prvResetNextTaskUnblockTime.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/cc3200/FreeRTOS/Source/extr_tasks.c_prvResetNextTaskUnblockTime.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@pxDelayedTaskList = common dso_local global i32 0, align 4
@pdFALSE = common dso_local global i64 0, align 8
@portMAX_DELAY = common dso_local global i32 0, align 4
@xNextTaskUnblockTime = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @prvResetNextTaskUnblockTime to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @prvResetNextTaskUnblockTime() #0 {
  %1 = alloca %struct.TYPE_2__*, align 8
  %2 = load i32, i32* @pxDelayedTaskList, align 4
  %3 = call i64 @listLIST_IS_EMPTY(i32 %2)
  %4 = load i64, i64* @pdFALSE, align 8
  %5 = icmp ne i64 %3, %4
  br i1 %5, label %6, label %8

6:                                                ; preds = %0
  %7 = load i32, i32* @portMAX_DELAY, align 4
  store i32 %7, i32* @xNextTaskUnblockTime, align 4
  br label %15

8:                                                ; preds = %0
  %9 = load i32, i32* @pxDelayedTaskList, align 4
  %10 = call i64 @listGET_OWNER_OF_HEAD_ENTRY(i32 %9)
  %11 = inttoptr i64 %10 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %11, %struct.TYPE_2__** %1, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %1, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = call i32 @listGET_LIST_ITEM_VALUE(i32* %13)
  store i32 %14, i32* @xNextTaskUnblockTime, align 4
  br label %15

15:                                               ; preds = %8, %6
  ret void
}

declare dso_local i64 @listLIST_IS_EMPTY(i32) #1

declare dso_local i64 @listGET_OWNER_OF_HEAD_ENTRY(i32) #1

declare dso_local i32 @listGET_LIST_ITEM_VALUE(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
